# zonen-tags

./: .gitattributes  .gitignore  LICENSE  README.md  app.py  config.toml.example  docker-compose.yaml  dockerfile  draw_image.py  frontend.html  generate_image.ipynb  nginx.conf  pyproject.toml  requirements.txt  test_images.ipynb  update-dns.sh  upload_image.py
static/: script.js
tag_configurator/: app.py  c_util.py  draw_image.py  fix_icons.py  libap.py  proto_def.py  update_firmware.py  upload_image.py
tag_configurator/static/: script.js  style.css
tag_configurator/static/image_templates/: 37c3.json  37c3.toml  geekend-dark.json  geekend1.json  large_display_design.json
tag_configurator/templates/: index.html
templates/: index.html
